--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@google/generative-ai": "^0.15.0",
+    "@langchain/openai": "^0.2.6",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.408.0",
+    "langchain": "^0.2.14",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
+    "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
