--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tensorflow/tfjs": "^4.20.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.16.1",
     "langchain": "^0.2.14",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
@@ -28,6 +29,7 @@
     "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.14.1",
     "react-player": "^2.16.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
